--- a/nservicebus/upgrades/6to6.2.md
+++ b/nservicebus/upgrades/6to6.2.md
@@ -41,7 +41,19 @@ With NServiceBus 6.2, the Outbox can only be enabled via the code first API. See
 
 A dedicated API to register [Message mutators](/nservicebus/pipeline/message-mutators.md) has been added. This should be used instead of registering them directly with the container.
 
-snippet: 6to6-2register-mutator
+In 6.x
+```csharp 
+endpointConfiguration.RegisterComponents(
+            registration: components =>
+            {
+                components.ConfigureComponent<MyMutator>(DependencyLifecycle.InstancePerCall);
+            });
+```
+
+In 6.2
+```csharp
+endpointConfiguration.RegisterMessageMutator(new MyMutator());
+```
 
 See also [Registering message mutators](/nservicebus/pipeline/message-mutators.md#registering-a-mutator).
 
